--- a/sdtranspiracia.html
+++ b/sdtranspiracia.html
@@ -295,15 +295,15 @@ Obe bunky sú mŕtve a lignifikované, čím sú odolné voči kolapsu pod negat
     
   </main>
 
- <!--<footer id="footer" class="footer">
+ <footer id="footer" class="footer">
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">iLanding</span>
+            <span class="sitename">L&B</span>
           </a>
-          <div class="footer-contact pt-3">
+       <!--   <div class="footer-contact pt-3">
             <p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
@@ -362,7 +362,7 @@ Obe bunky sú mŕtve a lignifikované, čím sú odolné voči kolapsu pod negat
         </div>
 
       </div>
-    </div>
+    </div>-->
 
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">iLanding</strong> <span>All Rights Reserved</span></p>
@@ -372,7 +372,7 @@ Obe bunky sú mŕtve a lignifikované, čím sú odolné voči kolapsu pod negat
       </div>
     </div>
 
-  </footer>--> 
+  </footer> 
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
